@@ -110,6 +110,8 @@ x2goserver (4.1.0.4-0x2go1.1) UNRELEASED; urgency=medium
     - x2goserver/bin/x2gopath.in: add and use support for NXLIBDIR; drop the
       lib-subdir detection.
     - x2goserver/bin/x2gopath.in: use [] instead of test, for consistency.
+    - x2goserver/Makefile: remove indirections, not needed any longer and
+      leading to build failures now.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
